syntax = "proto3";

option csharp_namespace = "Seguimiento.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";


message GetRequest{
	string id = 1;
}

message DeleteRequest{
	string id = 1;
}

message StartRequest{
	string id = 1; 
}

message EndRequest{
	string id = 1; 
}

message PauseRequest{
	string id = 1; 
}


message FaseDTO{
    string name = 1;
    string id =2;
    string Description=3;
	repeated OperationDTO items = 4;
	string identifier=5;
}

message OperationDTO{
    repeated FaseDTO items1 = 1;
	repeated ProcedureDTO items2 = 2;
    string name = 3;
	string id = 4;
	string description = 5;
    string code = 6;  
    string identifier=7;
}

message ProcedureDTO{
	repeated OperationDTO items = 1;
	string name = 2;
	string id = 3;
	string description = 4;
    string code = 5; 
	string identifier=6;
}
